src/styles/globalStyles.scss
@import './globalVariables.module.scss';
@import './globalMixins.scss';

html,
body,
div#root-layout {
  margin: 0;
  line-height: 1.625;
  background-color: $background-color;

  @media (min-width: $media-breakpoint-4) {
    font-size: 1.008rem;
    line-height: 1.65;
  }

  scroll-behavior: smooth !important;

  height: 100%;
}

body,
div#root,
div#root-layout {
  width: 100%;
  height: 100%;
}

main {
  padding: 0 16px;

  @media (min-width: $media-breakpoint-1) {
    padding: 0 32px;
  }

  @media (min-width: $media-breakpoint-2) {
    padding: 0 64px;
  }

  @media (min-width: $media-breakpoint-3) {
    padding: 0 128px;
  }
}

html {
  scrollbar-width: auto;
  scrollbar-color: #ff4248 #f5f5f5;

  // Always reserve place for scrollbar to prevent layout shifts
  // Calculate the difference between the viewport's width (100vw), which includes the scrollbar, and the body's width (100%), which does not
  // This difference is equal to the width of the scrollbar (or zero if there is no scrollbar)
  margin-left: calc(100vw - 100%);
  margin-right: 0;
}

div#root-layout {
  display: flex;
  justify-content: center;
}

::-webkit-scrollbar {
  width: 10px;
  background-color: #f5f5f5;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #f5f5f5;
}

::-webkit-scrollbar-thumb {
  background-color: #ff4248;
}

.latoFont {
  font-family: 'Lato', sans-serif;
}

code {
  background-color: rgba(28, 28, 28, 0.05);
  color: rgb(226, 32, 90);
  padding: 2px 3px 1px;
  border: 1px solid rgba(28, 28, 28, 0.15);
  border-radius: 3px;
}

